# Radxa-Model-Zoo

./: README.md  README_EN.md
application/Audio_assistant/: README.md
application/Audio_assistant/python/: README.md  requirements.txt  whisperWrapper.py  whisper_minicpm_llama3_vits.py
application/Audio_assistant/scripts/: download.sh  download_bm1684x_whisper_llama3_vits.sh  download_bm1684x_xtts.sh  download_bm1688_whisper_minicpm_vits.sh  download_datasets.sh
application/Audio_assistant/tools/: get_audio_device.py  microphone_input_play_test.py
application/ChatDoc/: README.md
application/ChatDoc/python/: README.md  config.ini  config.yaml  requirements.txt  web_demo_st.py
application/ChatDoc/scripts/: download.sh
application/LLM_api_server/: README.md
application/LLM_api_server/python/: README.md  api_server.py  config.yaml  request.py  requirements.txt
application/LLM_api_server/scripts/: download_model.sh  download_tokenizer.sh
application/YOLOv5_multi_QT/cpp/: run_hdmi_show.sh
application/cv-demo/cpp/: README.md  ff_decode.cc
docs/: Environment_Install_Guide.md  Environment_Install_Guide_EN.md
sample/BERT/: README.md
sample/BERT/cpp/: README.md
sample/BERT/docs/: BERT4torch_Exportonnx_Guide.md
sample/BERT/python/: README.md  bert_sail.py
sample/BLIP/: README.md
sample/BLIP/python/: README.md  blip.py  blip_server_cap.py  blip_server_itm.py  blip_server_vqa.py
sample/Baichuan2/python/: baichuan2.py
sample/C3D/scripts/: auto_test.sh
sample/CAM++/: README.md
sample/CAM++/cpp/: CMakeLists.txt  README.md  campplus.hpp  main.cpp
sample/CAM++/cpp/dependencies/include/feature/: feature_basic.cpp  feature_basic.h  feature_common.cpp  feature_fbank.cpp  feature_fbank.h
sample/CAM++/docs/: Campplus_Export_Guide.md
sample/CAM++/python/: README.md  campplus.py
sample/CAM++/scripts/: download.sh  gen_fp32bmodel_mlir.sh
sample/CAM++/tools/: campplus_npy.py
sample/CLIP/: README.md
sample/CLIP/cpp/: README.md
sample/CLIP/cpp/chinese_clip_opencv/: CMakeLists.txt  main.cpp
sample/CLIP/cpp/chinese_clip_opencv/clip/: clip.cpp  clip.hpp
sample/CLIP/cpp/chinese_clip_opencv/thirty_party/utf8proc/: CMakeLists.txt
sample/CLIP/cpp/chinese_clip_opencv/tokenizer/: bert_tokenizer.hpp
sample/CLIP/python/: README.md  clip_server.py
sample/CLIP/scripts/: download_chinese_bmodel.sh  gen_chinese_fp16bmodel_mlir.sh
sample/ChatGLM2/: README.md
sample/ChatGLM2/cpp/: CMakeLists.txt  README.md
sample/ChatGLM2/python/: README.md  chatglm2.py
sample/ChatGLM3/python/: chatglm3.py
sample/ChatGLM4/python/: chatglm4.py
sample/ChatTTS/: README.md  requirements.txt
sample/ChatTTS/docs/: ChatTTS_Export_Guide.md
sample/ChatTTS/python/: README.md  test.py  test_stream.py
sample/ChatTTS/scripts/: download.sh  gen_decoder_bmodel.sh  gen_gpt_bmodel.sh  gen_vocos_bmodel.sh
sample/ChatTTS/tools/: config.py  dvae.py  exporter.py  gpt.py
sample/DeepSORT/: README.md
sample/DeepSORT/cpp/: README.md
sample/DeepSORT/python/: README.md
sample/DirectMHP/: README.md
sample/DirectMHP/cpp/: README.md
sample/DirectMHP/python/: README.md
sample/FLUX.1/: README.md  requirements.txt
sample/FLUX.1/python/: README.md  flux_pipeline.py  run.py  web.py
sample/FLUX.1/scripts/: download.sh  export_models_from_HF.py  gen_bmodel.sh
sample/FaceFormer/: README.md
sample/FaceFormer/docs/: FaceFormer_Export_Guide.md
sample/FaceFormer/python/: README.md  faceformer.py  requirements.txt
sample/FaceFormer/scripts/: download.sh  gen_bmodel_mlir.sh
sample/FaceFormer/tools/: export_onnx.py  faceformer.py  gen_npz.py  wav2vec.py
sample/GroundingDINO/: README.md
sample/GroundingDINO/cpp/: README.md
sample/GroundingDINO/python/: PostProcess.py  README.md  groundingdino_pil.py
sample/InternVL2/: README.md
sample/InternVL2/python/: README.md  internvl2_sail.py
sample/InternVL2/scripts/: gen_bmodel.sh
sample/LPRNet/: README.md
sample/LPRNet/cpp/: README.md
sample/LPRNet/python/: README.md
sample/LPRNet/scripts/: auto_test.sh
sample/LightStereo/: README.md
sample/LightStereo/cpp/: README.md
sample/LightStereo/docs/: LightStereo_Export_Guide.md
sample/LightStereo/python/: README.md  lightstereo_bmcv.py  lightstereo_opencv.py
sample/LightStereo/scripts/: auto_test.sh  download.sh  gen_fp16bmodel_mlir.sh  gen_fp32bmodel_mlir.sh  gen_int8bmodel_mlir.sh
sample/LightStereo/tools/: compare_statis.py  eval.py  export_onnx.py
sample/Llama2/python/: llama2.py
sample/Llama3_2_Vision/: README.md
sample/Llama3_2_Vision/docs/: Llama3_2_Vision_Export_Guide.md
sample/Llama3_2_Vision/python/: README.md  llama3.py  requirements.txt
sample/Llama3_2_Vision/scripts/: download_bm1684x_bmodel.sh  download_onnx.sh  (+1 more)
sample/MP_SENet/: README.md
sample/MiniCPM/: README.md
sample/MiniCPM3/: README.md
sample/OpenPose/: README.md
sample/P2PNet/: README.md
sample/PP-OCR/: README.md
sample/Qwen/: README.md
sample/Qwen-VL-Chat/: README.md  requirements.txt
sample/Qwen2-VL/: README.md
sample/Qwen2-VL-Chat/: README.md
sample/Real-ESRGAN/: README.md
sample/ResNet/: README.md
sample/RetinaFace/: README.md
sample/SAM/: README.md
sample/SAM2/: README.md
sample/SCRFD/: README.md
sample/SlowFast/: README.md
sample/StableDiffusionV1_5/: README.md
sample/StableDiffusionXL/: README.md
sample/SuperGlue/: README.md
sample/Vila/: README.md
sample/Vila/cpp/vila_sail/: CMakeLists.txt  main.cpp  vila.cpp  vila.hpp
sample/Whisper/: README.md
sample/YOLOX/: README.md  README_EN.md
sample/YOLO_world/: README.md
sample/YOLOv10/: README.md
sample/YOLOv11_det/: README.md
sample/YOLOv34/: README.md
sample/YOLOv5/: README.md  README_EN.md
sample/YOLOv5_fuse/: README.md
sample/YOLOv5_opt/: README.md
sample/YOLOv7/: README.md
sample/YOLOv8_det/: README.md
sample/YOLOv8_obb/: README.md
sample/YOLOv8_pose/: README.md
sample/YOLOv8_seg/: README.md
sample/YOLOv9_det/: README.md
sample/YOLOv9_seg/: README.md
sample/ppYOLOv3/: README.md
sample/ppYoloe/: README.md
tutorial/stitch/: README.md
(+297 files in other folders)
